[metadata]
name = gateway_config
version = 0.0.2
author = Florian Desrumaux (NewTekNet)
author_email = florian@desrumaux.me
description = Web config to ttn-zh
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask
    flask_login
    flask_wtf
    wifi

[options.packages.find]
where = src

[options.entry_points]
    console_scripts = 
        gateway_config = gateway_config.__main__:main